--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
 <h1>{{ title }}</h1>
+
 <app-user-profile></app-user-profile>
 <app-sign-up></app-sign-up>
+
+<ul *appShowMovie="movie">
+        <li appHighlight>Avatar</li>
+        <li>Seul sur Mars</li>
+        <li>Interstellar</li>
+        <li>Big Fish</li>
+        <li>Public Ennemies</li>
+    </ul>
+
