--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
+
 <h1>{{ title }}</h1>
 
-<app-user-profile></app-user-profile>
-<app-sign-up></app-sign-up>
+<app-menu></app-menu>
 
+
+<h2>Movie List:</h2>
 <ul *appShowMovie="movie">
         <li appHighlight>Avatar</li>
         <li>Seul sur Mars</li>
