--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -1,3 +1,29 @@
 p {
     font-size: 20px;
 }
+
+img {
+    width: 50%;
+    border-radius: 20%;
+    box-shadow: 2px 1px 1px black;
+    margin-left: 0px;
+}
+
+#quote {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#email {
+    margin-top: 20px;
+}
+
+#user {
+    display: flex;
+
+}
+
+#input {
+    display: flex;
+    flex-direction: row;
+}
